--- a/index.html
+++ b/index.html
@@ -3,37 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CodingNewbie | Dev Journey</title>
+    <title>CodingNewbie80 | Self-Taught Dev Journey</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f4f4f4; color: #333; text-align: center; }
-        header { background: #1a1a1a; color: white; padding: 60px 20px; }
-        h1 { font-size: 3em; margin: 0; }
-        p { font-size: 1.2em; max-width: 800px; margin: 20px auto; }
-        .projects { padding: 40px; }
-        .project-card { background: white; margin: 20px auto; padding: 20px; max-width: 600px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-        a { color: #0066cc; text-decoration: none; }
-        footer { background: #1a1a1a; color: white; padding: 20px; margin-top: 40px; }
+        :root { --primary: #6366f1; --dark: #1e1b4b; --light: #f8fafc; }
+        body { font-family: 'Inter', sans-serif; margin: 0; background: var(--light); color: var(--dark); line-height: 1.6; }
+        header { background: linear-gradient(135deg, var(--dark) 0%, #312e81 100%); color: white; text-align: center; padding: 100px 20px; }
+        h1 { font-size: 3.5rem; margin: 0 0 16px; font-weight: 700; }
+        .tagline { font-size: 1.4rem; max-width: 700px; margin: 0 auto 24px; opacity: 0.9; }
+        .social { margin-top: 20px; }
+        .social a { color: white; margin: 0 12px; font-size: 1.2rem; text-decoration: none; transition: opacity 0.3s; }
+        .social a:hover { opacity: 0.7; }
+        .container { max-width: 1000px; margin: 0 auto; padding: 60px 20px; }
+        h2 { text-align: center; font-size: 2.2rem; margin-bottom: 40px; color: var(--dark); }
+        .projects-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 30px; }
+        .project-card { background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 30px rgba(0,0,0,0.08); transition: transform 0.3s; }
+        .project-card:hover { transform: translateY(-8px); }
+        .project-content { padding: 24px; text-align: center; }
+        .project-content h3 { margin: 0 0 12px; font-size: 1.5rem; color: var(--primary); }
+        .project-content p { margin: 0 0 16px; color: #64748b; }
+        .btn { display: inline-block; background: var(--primary); color: white; padding: 10px 24px; border-radius: 6px; text-decoration: none; font-weight: 600; transition: background 0.3s; }
+        .btn:hover { background: #4f46e5; }
+        footer { text-align: center; padding: 40px 20px; background: var(--dark); color: white; font-size: 0.9rem; }
     </style>
 </head>
 <body>
     <header>
         <h1>CodingNewbie80</h1>
-        <p>Former technophobe → Self-taught developer on the path to Web3 & Metaverse mastery.<br>
-        Documenting every step #learninpublic | Portfolio in progress 🚀</p>
-        <p><a href="https://x.com/CodingNewbie80" target="_blank">Follow on X</a></p>
+        <p class="tagline">From total technophobe to building in Web3 & the Metaverse.<br>Learning out loud, one line at a time. #learninpublic</p>
+        <div class="social">
+            <a href="https://x.com/CodingNewbie80" target="_blank">Follow on X →</a>
+        </div>
     </header>
 
-    <section class="projects">
-        <h2>My Projects</h2>
-        <div class="project-card">
-            <h3>Coming Soon...</h3>
-            <p>Phase 1: HTML Survey Form (Web3-themed) – Finishing soon!</p>
-            <p>More projects added as I complete FreeCodeCamp modules.</p>
+    <div class="container">
+        <h2>My Journey So Far</h2>
+        <div class="projects-grid">
+            <div class="project-card">
+                <div class="project-content">
+                    <h3>Phase 1: HTML Survey Form</h3>
+                    <p>Web3 Conference Feedback Form – in progress!<br>Finishing this week to complete FreeCodeCamp HTML certification.</p>
+                    <a href="#" class="btn">Coming Soon</a>
+                </div>
+            </div>
+            <!-- Add more cards here as you complete projects -->
+            <div class="project-card">
+                <div class="project-content">
+                    <h3>Next Up</h3>
+                    <p>CSS styling, JavaScript interactivity, then full Web3 dApps.</p>
+                    <a href="https://freecodecamp.org" target="_blank" class="btn">My Learning Path</a>
+                </div>
+            </div>
         </div>
-    </section>
+    </div>
 
     <footer>
-        <p>&copy; 2025 CodingNewbie80 | Built with HTML & ❤️</p>
+        <p>&copy; 2025 CodingNewbie80 | Built with HTML, CSS & determination 🚀</p>
     </footer>
 </body>
 </html>
