--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
 
     <footer>
         <p>&copy; 2025 CodingNewbie80 | Built with HTML, CSS & determination 🚀</p>
+    <p style="font-size: 0.9rem; opacity: 0.8; margin-top: 8px;">
+        Initial version created with AI assistance (Grok)—I'll rebuild it myself as I level up my skills! #learninpublic
+    </p>
     </footer>
 </body>
 </html>
