Update header tagline to broader vision

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
     <header>
         <h1>CodingNewbie80</h1>
-        <p class="tagline">From total technophobe to building in Web3 & the Metaverse.<br>Learning out loud, one line at a time. #learninpublic</p>
+        <p class="tagline"><p class="tagline">Self-taught dev learning to build any digital solution in any digital world.<br>From technophobe to full-stack generalist, one line at a time. #learninpublic</p>
         <div class="social">
             <a href="https://x.com/CodingNewbie80" target="_blank">Follow on X →</a>
         </div>
