Add first two portfolio projects: Destination Dubai and Event Hub

--- a/index.html
+++ b/index.html
@@ -43,18 +43,21 @@
         <div class="projects-grid">
             <div class="project-card">
                 <div class="project-content">
-                    <h3>Phase 1: HTML Survey Form</h3>
-                    <p>Web3 Conference Feedback Form – in progress!<br>Finishing this week to complete FreeCodeCamp HTML certification.</p>
-                    <a href="#" class="btn">Coming Soon</a>
-                </div>
+                <h3>Destination Dubai – Luxury Travel Agency</h3>
+                <p>Responsive product landing page promoting luxury holidays in Dubai. Features hero section, package highlights, and visual itinerary gallery with images.</p>
+                <p><strong>Client brief from Grok:</strong> Build a promotional landing page for a high-end travel brand.</p>
+                <a href="https://codingnewbie80.github.io/destination-dubai/" target="_blank" class="btn">Live Demo</a>
+                <a href="https://github.com/CodingNewbie80/destination-dubai" target="_blank" class="btn">View Code</a>
             </div>
-            <!-- Add more cards here as you complete projects -->
-            <div class="project-card">
-                <div class="project-content">
-                    <h3>Next Up</h3>
-                    <p>CSS styling, JavaScript interactivity, then full Web3 dApps.</p>
-                    <a href="https://freecodecamp.org" target="_blank" class="btn">My Learning Path</a>
-                </div>
+        </div>
+
+        <div class="project-card">
+            <div class="project-content">
+                <h3>Event Hub – Digital World Conferences</h3>
+                <p>Semantic HTML page showcasing upcoming and past Web3/Metaverse events with navigation, sections, and thematic imagery.</p>
+                <p><strong>Client brief from Grok:</strong> Create an event listing page for virtual and blockchain-focused conferences.</p>
+                <a href="https://codingnewbie80.github.io/event-hub/" target="_blank" class="btn">Live Demo</a>
+                <a href="https://github.com/CodingNewbie80/event-hub" target="_blank" class="btn">View Code</a>
             </div>
         </div>
     </div>
